--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-modal-video": "^1.2.10"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
